deleted some fonts i wasn't using

--- a/doqmeat/notebook/links/fonts.html
+++ b/doqmeat/notebook/links/fonts.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>fonts</title>
 	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
@@ -39,8 +40,6 @@
 
 		<p class="font" style="font-family:basiic;font-size:19px;"><a title="cred to cinni!" href="https://cinni.net/?z=/font" target="_blank">basiic by cinni</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
 
-		<p class="font" style="font-family:all-cat;font-size:19px;line-height:23px;"><a href="https://www.dafontfree.net/all-things-cat-regular/f107231.htm" target="_blank" style="font-weight:normal;font-family:ms gothic;">(all things cat)</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br></p>
-
 		<p class="font" style="font-family:quiet-meows;font-size:19px;"><a href="https://www.w3schools.com/code/tryit.asp?filename=GRXMO3GDH2BI" target="_blank" style="font-weight:normal;">quiet meows</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
 
 		<p class="font" style="font-family:heartfont;font-size:22px;"><a title="this is the credit url but im aware it goes to a 404  :(" href="https://nonty.net/font/freefont/heart-font/" target="_blank">heartfont</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
@@ -49,19 +48,13 @@
 
 		<p class="font" style="font-family:yoster;font-size:19px;"><a title="cred" href="https://www.1001fonts.com/users/codeman38/" target="_blank">yoster</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
 
-		<p class="font" style="font-family:glamourgirl;font-size:17px;"><a title="cred" href="https://www.1001fonts.com/glamourgirl-font.html" target="_blank">glamourgirl</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
-
 		<p class="font" style="font-family:nintendo-ds-bios;font-size:25px;"><a href="https://pastebin.com/xpiFGL3D" target="_blank">nintendo-ds-bios</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
-
-		<p class="font" style="font-family:iconbit2;font-size:14px;"><a href="https://pastebin.com/sVnqQfHU" target="_blank" style="font-weight:normal;font-family:ms pgothic;">(iconbit2)</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
 
 		<p class="font" style="font-family:emojifont;font-size:23px;"><a href="https://www.asterism-m.com/font/bmp-1byte/02.php" target="_blank" style="font-weight:normal;font-family:ms pgothic;">(emojifont) by asterism</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
 
 		<p class="font" style="font-family:dream;font-size:25px;letter-spacing:-1px;"><a href="https://www.w3schools.com/code/tryit.asp?filename=GT5FP6GC2LS1" target="_blank">(dreams)</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
 
 		<p class="font" style="font-family:morningtea;font-size:18px;"><a href="http://www.roseyposeypixels.com/linkware.html" target="_blank">morning tea</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
-
-		<p class="font" style="font-family:minecraft;font-size:16px;"><a href="https://pastebin.com/bKcCLX6W" target="_blank">minecraft</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
 
 		<p class="font" style="font-family:starlight;font-size:14px;"><a href="https://pastebin.com/ZgdCbyUE" target="_blank">starlight</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
 
@@ -85,8 +78,6 @@
 
 		<p class="font" style="font-family:garden-cursive;font-size:35px;line-height:35px;"><a href="https://www.dafont.com/growing-garden-script.font" target="_blank">growing garden (script)</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % &#38; *</p>
 
-		<p class="font" style="font-family:garden-emoji;font-size:40px;line-height:40px;"><a style="font-family:ms pgothic;" href="https://www.dafont.com/growing-garden-script.font" target="_blank">growing garden (dingbats)</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p>
-
 		<p class="font" style="font-family:gaegu-r;font-size:22px;"><a href="https://fonts.google.com/specimen/Gaegu" target="_blank">gaegu</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 내 손을 잡아 눈을 떠봐봐 <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
 
 		<p class="font" style="font-family:cozy kitty;font-size:30px;line-height:30px;"><a href="https://www.dafont.com/cozy-kitty.font" target="_blank">cozy kitty</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ?</p>
@@ -101,11 +92,9 @@
 
 		<p class="font" style="font-family:simple;font-size:23px;"><a href="https://www.asterism-m.com/font/bmp-1byte/" target="_blank">simple</a> by asterism<br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
 
-		<p class="font" style="font-family:nanum-b;font-size:22px;"><a href="https://www.dafont.com/bm-neco.font" target="_blank">nanum square</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 내 손을 잡아 눈을 떠봐봐 <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
+		<p class="font" style="font-family:nanum-r;font-size:22px;"><a href="https://www.dafont.com/bm-neco.font" target="_blank">nanum square</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 내 손을 잡아 눈을 떠봐봐 <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
 
 		<p class="font" style="font-family:bm-neko;font-size:32px"><a href="https://www.dafont.com/bm-neco.font" target="_blank">BM neko</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9</p>
-
-		<p class="font" style="font-family:kiwisoda;font-size:19px;"><a href="https://www.dafont.com/kiwisoda.font" target="_blank">kiwisoda</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
 
 		<p class="font" style="font-family:oldschool-ad;font-size:13px;"><a href="https://www.dafont.com/old-school-adventures.font" target="_blank">old school adventures</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
 
