--- a/doqmeat/notebook/links/credit.html
+++ b/doqmeat/notebook/links/credit.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>credit</title>
 	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
