minor homepage tweaks

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -89,6 +89,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 </head>
 
 <body>
+	
 	<script>
 		NekoType = "ghost"
 
@@ -96,6 +97,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 	<h1 id=nl>
 		<script src="https://webneko.net/n20171213.js"></script><a href="https://webneko.net">Neko</a>
 	</h1>
+
 
 
 	<div id="wrapper">
@@ -379,7 +381,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		</div>
 
 		<div id="cat" class="box">
-			<img id="catIMG" title="me irl btw" src="/!g/deco/cat-plush-BIG.png" alt="">
+			<img id="catIMG" title="me irl btw" src="/!g/homepage/cat-plush.png" alt="minecraft cat plush">
 		</div>
 
 		<!--		stickers around home-->
