button wall + collection

--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -195,6 +195,7 @@
 			<img src="!g/dontlikedontread.gif">
 			<img src="!g/fightingdepression.gif">
 			<a href="https://plasticdino.neocities.org/graphics" target="_blank"><img src="!g/polygonwave2.gif"></a>
+			<a href="https://aloftmelevar.neocities.org/mels-place/webgraphics" target="_blank"><img src="!g/scottthewoz.gif"></a>
 			<img src="!g/declaw.gif">
 			<img src="!g/happy-hallo.gif">
 			<img src="!g/just-kitten.gif">
@@ -276,7 +277,7 @@
 	</div>
 
 	<footer>
-		<p>last updated on: <b>10.apr.24</b></p>
+		<p>last updated on: <b>19.jun.24</b></p>
 		<p>page built with materials by <a href="https://foollovers.com/" target="_blank">foollovers</a> and bg by <a href="http://sozaiya405.chu.jp/" target="_blank">sozaiya 405</a></p>
 		<a href="/collection">collection</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a>
 	</footer>
