--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -47,20 +47,17 @@
 			<a title="jojo - i love how this site looks tbh" href="https://bruisedgh0st.neocities.org" target="_blank"><img src="!g/bruisedgh0st.gif"></a>
 			<a title="maalused - has a very cool and mysterious vibe to it!" href="https://maalused.neocities.org" target="_blank"><img src="!g/maalused.gif"></a>
 			<a title="nebula - a site with lots of cool things to read about being queer. also space and purple" href="https://nebula-galaxy.neocities.org" target="_blank"><img src="!g/nebula-galaxy.gif"></a>
-			<a title="river - cute website! can't wait to watch it grow" href="https://optimism.neocities.org" target="_blank"><img src="!g/optimism.png"></a>
 			<a title="jay - love the aesthetic of this site! the artbooks page is my favorite" href="https://catsoupery.neocities.org" target="_blank"><img src="!g/catsoupery.gif"></a>
 			<a title="hoonis - the most colorful website ever!! whimsical even" href="https://confettiguts.neocities.org" target="_blank"><img src="!g/confettiguts.gif"></a>
 			<a title="spencer - lots of cool collections + i love looking at pics of harvey aka his cat + THEJERM" href="https://foggybear42.neocities.org" target="_blank"><img src="!g/foggybear.gif"></a>
 			<a title="pirra - LOVE the sticker sheet collection!!! and it inspired mine as well" href="https://pirra.neocities.org" target="_blank"><img src="!g/pirra.gif"></a>
-			<a title="bomsoup - fellow kpopper, i also get very cool film recs from this site!" href="https://bomsoup.neocities.org" target="_blank"><img src="!g/bomsoup.gif"></a>
+			<a title="bomsoup - fellow kpopper, i also get very cool film recs from this site!" href="https://squirrelglue.neocities.org/" target="_blank"><img src="!g/squirrelglue.png" alt="squirrelglue"></a>
 			<a title="crow - really like their music reviews! it is always interesting to read on their perspective of things." href="https://crows-nest.neocities.org" target="_blank"><img src="!g/crows-nest.gif"></a>
 			<a title="juliette - CUTEEEE site!!! i love being here" href="https://juriettoo.neocities.org" target="_blank"><img src="!g/juriettoo.png"></a>
 			<a title="rio - awesome website with a responsive (and incredible!) layout. also has a ton of links to resources, books, etc!" href="https://nenrikido.neocities.org" target="_blank"><img src="!g/nenrikido.gif"></a>
 			<a title="zed - cool site with lots to see!" href="https://ohrade.neocities.org" target="_blank"><img src="!g/ohrade.gif"></a>
-			<a title="charc - LOVE the colors of this site!!! very cute" href="https://charc.neocities.org" target="_blank"><img src="!g/charc.gif"></a>
 			<a title="mamo - ONE OF MY FAV SITES!!! they have a ton of pages dedicated to the media they consume and i just love how they all look!!! lots of stuff to check out here! their lyrics pages is a must see" href="https://kakashi.neocities.org" target="_blank"><img src="!g/kakashi.gif"></a>
 			<a title="mn1ca - another of my favorite sites! centered around arts and craft! the layout is so cool too" href="https://mn1ca.neocities.org" target="_blank"><img src="!g/mn1ca.gif"></a>
-			<a title="toha - snails!" href="https://snals.neocities.org" target="_blank"><img src="!g/snals.gif"></a>
 			<a title="tuesday - cool site with interesting content!" href="https://tuesdaysplace.neocities.org" target="_blank"><img src="!g/tuesdaysplace.png"></a>
 			<a title="celine - super adorable" href="https://swirl.neocities.org" target="_blank"><img src="!g/swirl.gif"></a>
 			<a title="luc - cool site! has nice art and a bunch of links!" href="https://freakphone.net" target="_blank"><img src="!g/freakphone.net.gif"></a>
@@ -96,7 +93,6 @@
 			<a title="cloudcover - seal....." href="https://cloudcover.neocities.org" target="_blank"><img src="!g/Cloudcover.png"></a>
 			<a title="aster - this site is just sooo pretty!!!!" href="https://vampire-aster.neocities.org" target="_blank"><img src="!g/vampire-aster.gif"></a>
 			<a title="spiritcellar - we LOVE iframes in this house! just overall very cool stuff on this site" href="https://spiritcellar.neocities.org" target="_blank"><img src="!g/spiritcellar.gif"></a>
-			<a title="ike - all the clutter and graphics are o charming." href="https://milfgod.net" target="_blank"><img src="!g/milfgod.gif"></a>
 			<a title="vurren - meow :3" href="https://vurren.neocities.org" target="_blank"><img src="!g/vurren.gif"></a>
 			<a title="fedya - radioactive site but in a good way" href="https://fedyafunk.neocities.org/home" target="_blank"><img src="!g/fedyafunk.gif"></a>
 			<a title="grim / oscar - I LOVE THIS SITE!!!! it inspires me a ton i think it's so fun and i love the webmaster's art style as welll" href="https://bisuko.neocities.org/" target="_blank"><img src="!g/bisuko.png"></a>
@@ -275,6 +271,7 @@
 			<a title="bleu" href="https://bleu.nekoweb.org/" target="_blank"> <img src="https://files.catbox.moe/ofivcj.gif" /></a>
 			<a title="jeansgurl98" href="https://jeansgurl98.com" target="_blank"><img src="!g/jeansgurl98.png" alt="jeansgurl98"></a>
 			<a title="dvdnerd" href="https://dvdnerd.neocities.org" target="_blank"><img src="!g/dvdnerd.jpg" alt="dvdnerd"></a>
+			<a href="https://scarecat.neocitied.org" target="_blank"><img src="!g/scarecat.gif" alt="scarecat"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
