--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -33,6 +33,10 @@
 			<p><b></b> </p>
 		</article>
 -->
+				<article>
+			<p><b>19.jun.24 - 12am</b> find it a bit funny how i be writing these during literally 12 - 1am but anyways. spent a good chuck of yesterday trying to figure out git bash and you know what? this is actually pretty simple LOL... and it has been pretty useful too compared to <i>github desktop</i>! so i'm glad i finally understand that.</p>
+		</article>
+		
 			<article>
 				<p><b>15.jun.24 - 1pm</b> made some media log pages because notion is barely usable for meee. i think having them here will be better.</p>
 			</article>
