--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -53,6 +53,7 @@
 		<h3>change log</h3>
 
 		<div id="log">
+<li>19.jun.24: log: <a href="sonic-rush/index.html">sonic rush</a>
 			<li>17.jun.24: screenshots: <a href="style-savvy-trendsetters/index.html">style savvy trendsetters</a></li>
 			<li>09.jun.24: added: <a href="sonic-rush/index.html">sonic rush</a></li>
 			<li>05.jun.24: added <a href="style-savvy-trendsetters/index.html">style savvy: trendsetters</a></li>
