--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -71,145 +71,145 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<!-- 	template
 		
 	<div class="filterDiv">
-		<a title="game" href="/index.html" target="iframe_a"><img src="jpg" class="vgimg" tabindex="0"></a></div>
+		<a title="game" href="/index.html" target="iframe_a"><img src="jpg" tabindex="0"></a></div>
 -->
 		<div class="filterDiv finished adv single">
-			<a title="abzu" href="abzu/index.html" target="iframe_a"><img src="abzu/cover.jpg" class="vgimg" tabindex="0"></a>
+			<a title="abzu" href="abzu/index.html" target="iframe_a"><img src="abzu/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished sim">
-			<a title="animal crossing new horizons" href="acnh/index.html" target="iframe_a"><img src="acnh.jpg" class="vgimg" tabindex="0"></a>
+			<a title="animal crossing new horizons" href="acnh/index.html" target="iframe_a"><img src="acnh/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv notdone cat puzzle single">
-			<a title="a little to the left" href="a-little-to-the-left/index.html" target="iframe_a"><img src="alittletotheleft.jpg" class="vgimg" tabindex="0"></a>
+			<a title="a little to the left" href="a-little-to-the-left/index.html" target="iframe_a"><img src="a-little-to-the-left/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished vn single">
-			<a title="a new life" href="a-new-life/index.html" target="iframe_a"><img src="anewlife.jpg" class="vgimg" tabindex="0"></a>
+			<a title="a new life" href="a-new-life/index.html" target="iframe_a"><img src="a-new-life/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished action single adv">
-			<a title="bastion" href="bastion/index.html" target="iframe_a"><img src="bastion.jpg" class="vgimg" tabindex="0"></a>
+			<a title="bastion" href="bastion/index.html" target="iframe_a"><img src="bastion/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv toplay action single">
-			<a title="bayonetta origins: cereza and the lost demon" href="bayonetta-origins/index.html" target="iframe_a"><img src="bayo-origins.jpg" class="vgimg" tabindex="0"></a>
+			<a title="bayonetta origins: cereza and the lost demon" href="bayonetta-origins/index.html" target="iframe_a"><img src="bayonetta-origins/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv adv action notdone horror single">
-			<a title="bloodborne" href="bloodborne/index.html" target="iframe_a"><img src="bloodborne.jpg" class="vgimg" tabindex="0"></a>
+			<a title="bloodborne" href="bloodborne/index.html" target="iframe_a"><img src="bloodborne/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv">
-			<a title="breath of the wild" href="botw/index.html" target="iframe_a"><img src="botw/cover.jpg" class="vgimg" tabindex="0" alt="botw"></a>
+			<a title="breath of the wild" href="botw/index.html" target="iframe_a"><img src="botw/cover.jpg" tabindex="0" alt="botw"></a>
 		</div>
 		<div class="filterDiv fav finished adv platformer single">
-			<a title="bound" href="bound/index.html" target="iframe_a"><img src="bound.jpg" class="vgimg" tabindex="0"></a>
+			<a title="bound" href="bound/index.html" target="iframe_a"><img src="bound/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv fav finished adv single">
-			<a title="bugsnax" href="bugsnax/index.html" target="iframe_a"><img src="bugsnax.jpg" class="vgimg" tabindex="0"></a>
+			<a title="bugsnax" href="bugsnax/index.html" target="iframe_a"><img src="bugsnax/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv cat single rpg adventure">
-			<a title="cattails" href="cattails/index.html" target="iframe_a"><img src="cattails/cover.jpg" class="vgimg" tabindex="0"></a>
+			<a title="cattails" href="cattails/index.html" target="iframe_a"><img src="cattails/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv fav finished platformer single">
-			<a title="celeste" href="celeste/index.html" target="iframe_a"><img src="celeste.jpg" class="vgimg" tabindex="0"></a>
+			<a title="celeste" href="celeste/index.html" target="iframe_a"><img src="celeste/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv fav finished single puzzle">
-			<a title="cloud gardens" href="cloud-gardens/index.html" target="iframe_a"><img src="cloud-gardens/cover.jpg" class="vgimg" tabindex="0"></a>
+			<a title="cloud gardens" href="cloud-gardens/index.html" target="iframe_a"><img src="cloud-gardens/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv currently notdone single adventure">
-			<a title="the dog island" href="dog-island/index.html" target="iframe_a"><img src="dog-island.jpg" class="vgimg" tabindex="0"></a>
+			<a title="the dog island" href="dog-island/index.html" target="iframe_a"><img src="dog-island/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished fav single rpg action">
-			<a title="fallout" href="fallout-1/index.html" target="iframe_a"><img class="vgimg" src="fallout-1/cover.jpg" alt="fallout" tabindex="0"></a>
+			<a title="fallout" href="fallout-1/index.html" target="iframe_a"><img src="fallout-1/cover.jpg" alt="fallout" tabindex="0"></a>
 		</div>
 		<div class="filterDiv currently notdone single action shooter rpg">
-			<a title="fallout new vegas" href="fallout-new-vegas/index.html" target="iframe_a"><img src="fallout-new-vegas/cover.jpg" class="vgimg" tabindex="0" alt="fallout new vegas"></a>
+			<a title="fallout new vegas" href="fallout-new-vegas/index.html" target="iframe_a"><img src="fallout-new-vegas/cover.jpg" tabindex="0" alt="fallout new vegas"></a>
 		</div>
 		<div class="filterDiv finished rpg single">
-			<a title="dragon age inquisition" href="dai/index.html" target="iframe_a"><img src="dragonageinquisition.jpg" class="vgimg" tabindex="0"></a>
+			<a title="dragon age inquisition" href="dai/index.html" target="iframe_a"><img src="dai/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished sim single">
-			<a title="fashion dreamer" href="fashion-dreamer/index.html" target="iframe_a"><img src="fashion-dreamer.jpg" class="vgimg" tabindex="0"></a>
+			<a title="fashion dreamer" href="fashion-dreamer/index.html" target="iframe_a"><img src="fashion-dreamer/cover1.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv fav action finished single">
-			<a title="fallout 4" href="fallout-4/index.html" target="iframe_a"><img src="fallout-4.jpg" class="vgimg" tabindex="0"></a>
+			<a title="fallout 4" href="fallout-4/index.html" target="iframe_a"><img src="fallout-4/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv horror adventure">
-			<a title="fatum betula" href="fatum-betula/index.html" target="iframe_a"><img src="fatum-betula/cover.jpg" class="vgimg" tabindex="0" alt="fatum betula"></a>
+			<a title="fatum betula" href="fatum-betula/index.html" target="iframe_a"><img src="fatum-betula/cover.jpg" tabindex="0" alt="fatum betula"></a>
 		</div>
 		<div class="filterDiv action multi">
-			<a title="fortnite" href="fortnite/index.html" target="iframe_a"><img src="fortnite.jpg" class="vgimg" tabindex="0"></a>
+			<a title="fortnite" href="fortnite/index.html" target="iframe_a"><img src="fortnite/fortnite.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv fav finished single adventure plat">
-			<a title="gris" href="gris/index.html" target="iframe_a"><img src="gris/cover.jpg" class="vgimg" tabindex="0" alt="gris"></a>
+			<a title="gris" href="gris/index.html" target="iframe_a"><img src="gris/cover.jpg" tabindex="0" alt="gris"></a>
 		</div>
 		<div class="filterDiv fav finished action single">
-			<a title="hyper light drifer" href="hld/index.html" target="iframe_a"><img src="hyperlightdrifter.jpg" class="vgimg" tabindex="0"></a>
+			<a title="hyper light drifer" href="hld/index.html" target="iframe_a"><img src="hld/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv fav finished single adventure plat action">
-			<a title="hollow knight" href="hollow-knight/index.html" target="iframe_a"><img src="hollow-knight/cover.jpg" class="vgimg" tabindex="0" alt="hollow knight"></a>
+			<a title="hollow knight" href="hollow-knight/index.html" target="iframe_a"><img src="hollow-knight/cover.jpg" tabindex="0" alt="hollow knight"></a>
 		</div>
 		<div class="filterDiv fav finished vn single">
-			<a title="if found..." href="if-found/index.html" target="iframe_a"><img src="if-found.jpg" class="vgimg" tabindex="0"></a>
+			<a title="if found..." href="if-found/index.html" target="iframe_a"><img src="if-found/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished action single">
-			<a title="infamous second son" href="infamous-2nd-son/index.html" target="iframe_a"><img src="infamous-second-son.jpg" class="vgimg" tabindex="0"></a>
+			<a title="infamous second son" href="infamous-2nd-son/index.html" target="iframe_a"><img src="infamous-2nd-son/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv toplay single">
-			<a title="jet set radio" href="jet-set-radio/index.html" target="iframe_a"><img src="jetsetradio.jpg" class="vgimg" tabindex="0"></a>
+			<a title="jet set radio" href="jet-set-radio/index.html" target="iframe_a"><img src="jet-set-radio/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv cat fav adv finished single">
-			<a title="journey" href="journey/index.html" target="iframe_a"><img src="journey.jpg" class="vgimg" tabindex="0"></a>
+			<a title="journey" href="journey/index.html" target="iframe_a"><img src="journey/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished vn single horror">
-			<a title="milk inside a bag of milk inside a bag of milk" href="milk-inside/index.html" target="iframe_a"><img src="milk-inside/cover.jpg" class="vgimg" tabindex="0" alt="milk inside a bag of milk inside a bag of milk"></a>
+			<a title="milk inside a bag of milk inside a bag of milk" href="milk-inside/index.html" target="iframe_a"><img src="milk-inside/cover.jpg" tabindex="0" alt="milk inside a bag of milk inside a bag of milk"></a>
 		</div>
 		<div class="filterDiv fav notdone multi single">
-			<a title="minecraft" href="minecraft/index.html" target="iframe_a"><img src="minecraft.jpg" class="vgimg" tabindex="0"></a>
+			<a title="minecraft" href="minecraft/index.html" target="iframe_a"><img src="minecraft/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished vn single">
-			<a title="needy streamer overload" href="needy-streamer/index.html" target="iframe_a"><img src="needystreamer.jpg" class="vgimg" tabindex="0"></a>
+			<a title="needy streamer overload" href="needy-streamer/index.html" target="iframe_a"><img src="needy-streamer/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv fav finished cat single">
-			<a title="night in the woods" href="nitw/index.html" target="iframe_a"><img src="nitw.jpg" class="vgimg" tabindex="0"></a>
+			<a title="night in the woods" href="nitw/index.html" target="iframe_a"><img src="nitw/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv currently notdone vn single horror">
-			<a title="paranormasight" href="paranormasight/index.html" target="iframe_a"><img src="paranormasight/cover.jpg" class="vgimg" tabindex="0"></a>
+			<a title="paranormasight" href="paranormasight/index.html" target="iframe_a"><img src="paranormasight/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished adventure single">
-			<a title="pikmin 4" href="pikmin-4/index.html" target="iframe_a"><img src="pikmin-4.jpg" class="vgimg" tabindex="0"></a>
+			<a title="pikmin 4" href="pikmin-4/index.html" target="iframe_a"><img src="pikmin-4/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv fav finished single">
-			<a title="portal 2" href="portal-2/index.html" target="iframe_a"><img src="portal-2.jpg" class="vgimg" tabindex="0"></a>
+			<a title="portal 2" href="portal-2/index.html" target="iframe_a"><img src="portal-2/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv rhythm vn">
-			<a title="project sekai" href="prsk/index.html" target="iframe_a"><img src="prsk.jpg" class="vgimg" tabindex="0"></a>
+			<a title="project sekai" href="prsk/index.html" target="iframe_a"><img src="prsk/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished horror adventure single">
-			<a title="rental" href="rental/index.html" target="iframe_a"><img src="rental/cover.jpg" class="vgimg" tabindex="0" alt="rental"></a>
+			<a title="rental" href="rental/index.html" target="iframe_a"><img src="rental/cover.jpg" tabindex="0" alt="rental"></a>
 		</div>
 		<div class="filterDiv fav finished action adv single">
-			<a title="solar ash" href="solar-ash/index.html" target="iframe_a"><img src="solarash.jpg" class="vgimg" tabindex="0"></a>
+			<a title="solar ash" href="solar-ash/index.html" target="iframe_a"><img src="solar-ash/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv fav notdone currently platformer">
-			<a title="sonic rush" href="sonic-rush/index.html" target="iframe_a"><img src="sonic-rush/cover.png" class="vgimg" tabindex="0"></a>
+			<a title="sonic rush" href="sonic-rush/index.html" target="iframe_a"><img src="sonic-rush/cover.png" tabindex="0"></a>
 		</div>
 		<div class="filterDiv multi shooter notdone">
-			<a title="splatoon 2" href="splatoon-2/index.html" target="iframe_a"><img src="splatoon-2/cover.jpg" class="vgimg" tabindex="0" alt="splatoon 2"></a>
+			<a title="splatoon 2" href="splatoon-2/index.html" target="iframe_a"><img src="splatoon-2/cover.jpg" tabindex="0" alt="splatoon 2"></a>
 		</div>
 		<div class="filterDiv finished sim single">
-			<a title="sticky business" href="sticky-business/index.html" target="iframe_a"><img src="sticky-business/cover.png" class="vgimg" tabindex="0"></a>
+			<a title="sticky business" href="sticky-business/index.html" target="iframe_a"><img src="sticky-business/cover.png" tabindex="0"></a>
 		</div>
 		<div class="filterDiv cat fav finished single adv">
-			<a title="stray" href="stray/index.html" target="iframe_a"><img src="stray.jpg" class="vgimg" tabindex="0"></a>
+			<a title="stray" href="stray/index.html" target="iframe_a"><img src="stray/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv notdone single sim currently">
-			<a title="style savvy: trendsetters" href="style-savvy-trendsetters/index.html" target="iframe_a"><img src="style-savvy-trendsetters/cover.JPG" class="vgimg" tabindex="0"></a>
+			<a title="style savvy: trendsetters" href="style-savvy-trendsetters/index.html" target="iframe_a"><img src="style-savvy-trendsetters/cover.JPG" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished single puzzle">
-			<a title="unpacking" href="unpacking/index.html" target="iframe_a"><img src="unpacking.jpg" class="vgimg" tabindex="0"></a>
+			<a title="unpacking" href="unpacking/index.html" target="iframe_a"><img src="unpacking/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished action shooter single">
-			<a title="watch dogs 2" href="watch-dogs-2/index.html" target="iframe_a"><img src="watch-dogs-2/cover.jpg" class="vgimg" tabindex="0"></a>
+			<a title="watch dogs 2" href="watch-dogs-2/index.html" target="iframe_a"><img src="watch-dogs-2/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv vn finished">
-			<a title="we know the devil" href="we-know-the-devil/index.html" target="iframe_a"><img src="we-know-the-devil/cover.png" class="vgimg" tabindex="0" alt="we know the devil"></a>
+			<a title="we know the devil" href="we-know-the-devil/index.html" target="iframe_a"><img src="we-know-the-devil/cover.png" tabindex="0" alt="we know the devil"></a>
 		</div>
 		<!--
 		<div class="filterDiv finished horror single">
