updated info html

--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -45,15 +45,14 @@
 <body>
 	<div id="iframepc">
 		<p>welcome to <span class="gaminglog">doqmeat's gaming log!</span> these are either video games i've enjoyed, currently playing, or want to play! most of the time i'll write my thoughts on them, my progress, share screenshots i've taken, and anything else! spoilers will be <span class="spoiler">hidden!</span></p>
-		<p>click on a <mark>vg thumbnail and content will appear here!</mark> <span class="hide"> <img src="/!g/pix/caution1.gif"> <a href="/vgs" target="_parent">click here to go to index page</a> if you're out of frame!</span>
-		<p><small>they are in alphabetical order and can be sorted by the tags seen above them!</small></p>
+		<p>click on a <mark>video game thumbnail and content will appear here!</mark> <span class="hide"> <img src="/!g/pix/caution1.gif"> <a href="/vgs" target="_parent">click here to go to index page</a> if you're out of frame!</span>
 
-		<hr>
+			<hr>
 
 		<h3>change log</h3>
 
 		<div id="log">
-<li>19.jun.24: log: <a href="sonic-rush/index.html">sonic rush</a>
+			<li>19.jun.24: log: <a href="sonic-rush/index.html">sonic rush</a>
 			<li>17.jun.24: screenshots: <a href="style-savvy-trendsetters/index.html">style savvy trendsetters</a></li>
 			<li>09.jun.24: added: <a href="sonic-rush/index.html">sonic rush</a></li>
 			<li>05.jun.24: added <a href="style-savvy-trendsetters/index.html">style savvy: trendsetters</a></li>
