--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -34,6 +34,10 @@
 		</article>
 -->
 			<article>
+				<p><b>19.jun.24 - 11pm</b> messing with the neocities CLI. this shit is crazy.</p>
+			</article>
+
+			<article>
 				<p><b>19.jun.24 - 7pm</b> the neocities profile red notification really only be working whenever the fuck it wants.</p>
 			</article>
 
