--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -34,7 +34,7 @@
 		</article>
 -->
 			<article>
-				<p><b>19.jun.24 - 11pm</b> messing with the neocities CLI. this shit is crazy.</p>
+				<p><b>19.jun.24 - 11pm</b> installed ruby and i've been messing with the neocities CLI. this shit is crazy. it does the job without me having to use github so there's that. but using a different terminal rather than git bash is a very minor annoyance. been also trying to create a git hook as shown <a href="https://neocities.org/cli" target="_blank">here</a> but i can't exactly get it to work. argggg. another day then.</p>
 			</article>
 
 			<article>
