added new stamp

--- a/doqmeat/collection/mail-stamps/index.html
+++ b/doqmeat/collection/mail-stamps/index.html
@@ -37,10 +37,10 @@ coded with love by des
 	<div id="wrapper">
 		<a title="internet stamps collection" class="img" href="/collection/internet-graphics#1" target="_blank"><img src="/collection/internet-graphics/!g/stamp.gif" style="margin-top:10px;float:right;"></a>
 		<h1>mail stamps</h1>
-		<p>stamps i've gathered from my USPS adventures. <b>i like sending out letters and postcards</b> to friends so thats why i have these. i dont go out of my way to collect them, though i would love to! <img src="/!g/pix/cat-tail.gif"> which reminds me: i need to get more stamps.</p>
+		<p>stamps i've gathered from my USPS adventures as well as others. <b>i like sending out letters and postcards</b> to friends so thats why i have some of these. i don't go out of my way to collect them, though i would love to! <img src="/!g/pix/cat-tail.gif"></p>
 		<div id="container">
 			<div class="column">
-				<img title="new!" src="!g/240607-flowers.png" alt="watercolor flowers">
+				<img src="!g/240607-flowers.png" alt="watercolor flowers">
 				<img src="!g/fruit.jpg" alt="drawing of apples on branches">
 				<img src="!g/cacti-2019.jpg" alt="top down view of cactus with a flower on the top. from 2018">
 			</div>
@@ -54,6 +54,7 @@ coded with love by des
 				<img src="!g/us-flag.jpg" alt="3 usa flags">
 			</div>
 			<div class="column">
+				<img title="new!" src="!g/240621-sunflower.png" alt="2022 global stamp with a sunflower">
 				<img src="!g/rabbit.jpg" alt="rabbit">
 				<img src="!g/uk-queen.jpg" alt="the queen from england">
 			</div>
@@ -65,7 +66,7 @@ coded with love by des
 		</div>
 
 		<footer>
-			<b>last updated on: 07.jun.24</b>
+			<b>last updated on: 21.jun.24</b>
 			<br>
 			<b>credit:</b> bg img by <a href="https://www.pexels.com/photo/brown-wooden-gate-and-green-leafed-tree-63743/" target="_blank">donald tong on pexels</a> / <a href="/notebook/links/fonts.html">fonts</a> used: simple, garden script.
 			<br>
