--- a/doqmeat/shrines/mizu/index.html
+++ b/doqmeat/shrines/mizu/index.html
@@ -256,6 +256,7 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 				</div>
 				<!--				column 3-->
 				<div class="column">
+					<img title="what a sleepy boy" src="!g/sleepy-boy.jpg">
 					<img title="feeling festive" src="!g/christmas.jpeg">
 					<img src="!g/ponty.jpg">
 					<img title="flowers" src="!g/meow6.jpg">
@@ -268,7 +269,7 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 		</div>
 
 		<div id="footer" class="text-bbl">
-			<p>last updated: 20.mar.24</p>
+			<p>last updated: 21.jun.24</p>
 			<p><b>resources used in this page:</b> cursor from <a href="https://www.cursors-4u.com" target="_blank">cursors 4u</a>, basiic font by <a href="https://cinni.net/?z=/font" target="_blank">cinni</a></p>
 		</div>
 
