added kaiba to tv log + other minor updates

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -126,12 +126,12 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="/blog"><img src="/!g/pix/paper.gif" alt=""> blog</a>
 			<a href="/scrapbook"><img src="!g/pix/scissors6.gif" alt=""> scrapbook</a>
 			<a href="/shrines"><img src="/!g/pix/heart2.gif" alt=""> shrines</a>
-			<a href="/collection"><img src="/!g/pix/pics.gif" alt=""> collections <img src="/!g/pix/new1.gif"></a>
+			<a href="/collection"><img src="/!g/pix/pics.gif" alt=""> collections</a>
 			<a title="WIP!" href="/art"><img src="/!g/pix/catdraw.gif" alt=""> art &amp; crafts <img src="!g/pix/caution1.gif" alt=""></a>
 			<h3>media logs</h3>
 			<a href="/music"><img src="/!g/pix/sorahanamuu1.gif" alt=""> music</a>
 			<a href="/vgs"><img src="/!g/pix/vgs.gif" alt=""> video games</a>
-			<a title="WIP" href="/tv"><img src="!g/pix/tv1.gif" alt=""> shows</a>
+			<a href="/tv"><img src="!g/pix/tv1.gif" alt=""> shows <img src="!g/pix/updated1.gif" alt=""></a>
 			<a title="WIP" href="/books"><img src="/!g/pix/book3.gif" alt=""> books <img src="!g/pix/caution1.gif" alt=""></a>
 			<a href="/october-movies"><img src="/!g/pix/gaikotsu2.gif"> october movies</a>
 			<h3>misc</h3>
@@ -143,7 +143,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h3>sitely</h3>
 			<a href="/sites"><img src="/!g/pix/favcharas.gif"> button wall</a>
 			<a title="contains links, resources, F2U stuff, archives, etc!" href="/notebook"><img src="/!g/pix/notebook.gif"> notebook</a>
-			<a href="/guestbook"><img src="/!g/pix/bear-inside-mail.gif"> guestbook <img src="/!g/pix/new1.gif"></a>
+			<a href="/guestbook"><img src="/!g/pix/bear-inside-mail.gif"> guestbook</a>
 			<button title="chatbox will open in a tiny window!" onclick="chat()" class="no"><img src="/!g/pix/msgbbl.gif"> chatbox</button>
 			<a href="/sitemap"><img src="/!g/pix/world.gif"> sitemap</a>
 
