--- a/doqmeat/notebook/sitely/graphics.html
+++ b/doqmeat/notebook/sitely/graphics.html
@@ -52,7 +52,7 @@
 
 		<p>img heavy! might have to reload the page so all imgs to load</p>
 
-		<p>i have all of these here so its easier for me to look them up to use on my pages! <br> feel free to take any of these for your own site as well but please 1) visit the creator's page and read their rules (if there's credit linked) 2) and do not <u>hotlink</u>! <mark>save to your own server</mark></p>
+		<p>i have all of these here so its easier for me to look them up to use on my pages! <br> feel free to take any of these for your own site as well but please 1) visit the creator's page and read their rules (if there's credit linked) 2) and do not <u>hotlink</u>! <mark>save to your own server/site</mark></p>
 		<p>credit for these will be linked on the img if i know of it. i'm currently in the process of reverse img searching sources. <b>if you know the source of an img, or are the original creator of any of these and want it deleted/remove: please</b> <a href="tomail:doqmeat@gmail.com" target="_blank">let me know!</a></p>
 
 		<h2 id="emo">emoticons</h2>
@@ -401,7 +401,10 @@
 
 		<h3>site icons</h3>
 
-		<img src="/!g/pix/new1.gif"><img src="/!g/pix/updated.gif"><img src="/!g/pix/caution.gif">
+		<img src="/!g/pix/new1.gif">
+		<img title="edited by me from the previous one. no need to credit" src="/!g/pix/updated1.gif">
+		<img src="/!g/pix/updated.gif">
+		<img src="/!g/pix/caution.gif">
 		<a title="foollovers.com" href="https://foollovers.com" target="_blank"><img src="/!g/pix/backd7.gif"><img src="/!g/pix/updated2.gif"><img src="/!g/pix/topa8.gif"><img src="/!g/pix/block.gif"><img src="/!g/pix/flo.gif"><img src="/!g/pix/flx.gif"><img src="/!g/pix/r18.gif"></a>
 		<a title="sleepysprout" href="https://sleepysprout.neocities.org/index1" target="_blank"><img src="/!g/pix/checkdots.png"><img src="/!g/pix/checkno.png"><img src="/!g/pix/checkyes.png"><img src="/!g/pix/picim.png"></a>
 
