--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -17,7 +17,7 @@
 <body>
 	<header>
 		<h1>TV log</h1>
-		<p>keeping track of the stuff i've watched that i've enjoyed + some thoughts on them. currently a WIP.</p>
+		<p>keeping track of the stuff i've watched that i've enjoyed + some thoughts on them.</p>
 	</header>
 	<main>
 		<div id="wrapper">
@@ -29,11 +29,26 @@
 					<div class="box">
 						<h3>title</h3>
 						<p>caption</p>
-						<p class="status">
+<p class="status"></p>
 					</div>
 				</div>
 			</div>
 			-->
+			<div class="show">
+				<img src="!g/kaiba.png">
+				<div class="hov">
+					<div class="box">
+						<h3>kaiba</h3>
+						<p>i decided to watch this one day because i stumbled upon this gif one day <br> <img src="/!g/gif/kaiba.gif" width="100%"> <br> and i just found the art so so so beautiful!</p>
+						<p>i was not very smart for watching this while going through a 4 day migraine because the plot can sometimes be a bit tricky to understand in the latter half. as of writing this, i've watched this anime at least 4 times and i must say that i do get it now.</p>
+						<p>the world of this is so cool and interesting. the main characters (kaiba and neyro) are also so lovely too. understanding their relationship and you learn more and more about them is just soooo. oh my god. i just love them so much. on my first watch i basically couldn't move as i was watching the credits roll on the last episode. it really stayed with me and i kept thinking about it (AND I STILL DO) for so long. it genuinely touched me.</p>
+						<p>i love the concept of being able to store memories in a chip and as long as you can get another body then you are basically immortal. but of course, there is way more than in the plot of this anime. also the art style is just so charming and cute given how dark this show gets.</p>
+						<p>there's some parts that are a bit weird tbh that have made go ermm but overall this was an absolute treat to watch and experience. i will never forget it. i also own the bluray so i literally rewatch it every 3 months.</p>
+						<p>watching this was what made me interesting in watching <a href="/masaaki-yuasa/index.html">masaaki yuasa</a>'s other work! it has also been my favorite out of all of them.</p>
+						<p class="status">finished</p>
+					</div>
+				</div>
+			</div>
 
 			<div class="show">
 				<img src="!g/dungeon-meshi.png">
@@ -82,7 +97,6 @@
 				<li>smiling friends</li>
 				<li>mob psycho 100</li>
 				<li>paper girls</li>
-				<li>kaiba</li>
 				<li>neon genesis evangelion</li>
 				<li>over the garden wall</li>
 				<li>the bear</li>
@@ -114,6 +128,7 @@
 		</details>
 	</main>
 	<footer>
+		<p><b>last updated: 21.jun.24</b></p>
 		<p> <a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a></p>
 		<p><b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: basiic, pink tape / body bg from madoka magica: rebellion</p>
 	</footer>
