--- a/doqmeat/vgs/celeste/index.html
+++ b/doqmeat/vgs/celeste/index.html
@@ -46,7 +46,7 @@
 		<p><span class="date">10.may.23</span>okay i have been informed of the c-sides.... i don't think i will be 100% this game BUT i do wanna get all the blue hearts and the b-sides</p>
 		<hr>
 		<p><span class="date">12.may.23</span>progress so far! cant believe ive collected all the berries!</p>
-		<img src="230512-progress.png" width="100%">
+		<img src="230512-progress.jpg" width="100%">
 		<hr>
 		<p><span class="date">28.may.23</span>sooooo. i am currently on chapter 9 part 6 (which is you didnt know is the last and hardest chapter in the game) and boy i think its been an entire week since i got stuck in a level. well. not really stuck. i can see myself making progress! but boy is it taking me a while to get through chapter 9's parts... and im not even halfway. besides that i got through most of chapter 8's b-side! i think i gotta do one more part and i'll be done with the b-sides</p>
 		<img src="progress2.jpg" width="100%">
