--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -67,8 +67,8 @@
 			<li><b>media logs</b></li>
 			<ul>
 				↳ <a href="/vgs" target="_parent">video games</a>
-				<br> ↳ <a title="they are just lists ATM" href="/tv" target="_parent">TV</a> <img src="/!g/pix/new1.gif"> <img src="/!g/pix/caution1.gif">
-				<br> ↳ <a title="they are just lists ATM" href="/books" target="_parent">books</a> <img src="/!g/pix/new1.gif"> <img src="/!g/pix/caution1.gif">
+				<br> ↳ <a href="/tv" target="_parent">TV</a> <img src="/!g/pix/new1.gif">
+				<br> ↳ <a href="/books" target="_parent">books</a> <img src="/!g/pix/new1.gif"> <img src="/!g/pix/caution1.gif">
 				<br> ↳ <a href="/music/listening-log" target="_parent">music</a>
 			</ul>
 			<li><a title="missing CSS" href="/art" target="_parent">art</a> <img src="/!g/pix/caution1.gif"></li>
