made alt button

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -25,9 +25,9 @@
 	<div class="box">
 
 		<p><img src="/!g/pix/kuma-macbook-60.png" align="right">a page dedicated to cool sites i've come across while web surfing!</p>
-		<p>here's my button and code if you'd like to link back to me ☆⌒(*＾-゜)v</p>
-		<img title="download it to your own server!" src="!g/doqmeat.png">
-		<textarea><a href="https://doqmeat.com" target="_blank"><img src="https://files.catbox.moe/xqrl8u.png" alt="doqmeat button"></a></textarea>
+		<p>here's my button and code if you'd like to link back to me ☆⌒(*＾-゜)v and remember to save them to your own site!</p>
+		<img title="made in 20.apr.23" src="/!g/web/doqmeat.png" alt="doqmeat button">
+		<img title="made in 22.jun.24" src="/!g/web/doqmeat-2.png" alt="doqmeat button">
 		<h3><img src="/!g/pix/icon_k_love1.gif"> internet neighbors</h3>
 
 		<div class="neo">
