--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -357,10 +357,10 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="button" class="box">
 			<h2>link me!</h2>
-			<p>and remember to <a class="outlink" href="https://awesomelytechie.com/dont-hotlink/" target="_blank">not hotlink</a></p>
+			<p>and remember to <a class="outlink" href="https://awesomelytechie.com/dont-hotlink/" target="_blank">not hotlink</a> save them to your own server/site pls!</p>
 
-			<img src="sites/!g/doqmeat.png" alt="doqmeat button">
-			<textarea style="max-width:88px;height:35px;"><a href="https://doqmeat.com" target="_blank"><img src="https://files.catbox.moe/xqrl8u.png" alt="doqmeat"></a></textarea>
+			<img src="!g/web/doqmeat.png" alt="doqmeat button">
+			<img src="!g/web/doqmeat-2.png" alt="doqmeat button">
 		</div>
 
 		<div id="chatbox">
@@ -432,7 +432,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<p>website coded with lots of love by des <img src="/!g/pix/catheart1.gif" alt="">
 			on the web since <b>april 11, 2023</b> <img src="/!g/pix/catroll.gif" alt="">
 			hosted on <a class="outlink" href="https://neocities.org/site/doqmeat" target="_blank">neocities</a></p>
-		<p> <img src="/sites/!g/doqmeat.png">
+		<p>
 			<a href="https://decolonizepalestine.com/" style="background:transparent"><img src="/collection/internet-graphics/!g/palestine.gif" alt="free palestine button"></a>
 			<img src="/collection/internet-graphics/!g/best%20viewed.jpg">
 			<img src="/collection/internet-graphics/!g/nop.gif">
