me irl pics in about

--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -80,6 +80,8 @@
 					<img src="/collection/cats/!g/ishelistening.jpg">
 					<img src="!g/me-irl/silly_dog.png">
 					<img src="!g/me-irl/computer-guy.jpg">
+					<img src="!g/me-irl/dj-baby.jpg">
+					<img src="!g/me-irl/german-shepard.jpg">
 					<img src="!g/me-irl/good-light-skull.jpg">
 					<img src="/!g/gif/darksoulsskel.gif">
 					<img src="!g/me-irl/nyaboom.jpg">
