--- a/doqmeat/notebook/links/fonts.html
+++ b/doqmeat/notebook/links/fonts.html
@@ -48,7 +48,7 @@
 
 		<p class="font" style="font-family:yoster;font-size:19px;"><a title="cred" href="https://www.1001fonts.com/users/codeman38/" target="_blank">yoster</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
 
-		<p class="font" style="font-family:nintendo-ds-bios;font-size:25px;"><a href="https://pastebin.com/xpiFGL3D" target="_blank">nintendo-ds-bios</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
+		<p class="font" style="font-family:nintendo-ds-bios;font-size:25px;"><a href="https://www.dafont.com/nintendo-ds-bios.font" target="_blank">nintendo-ds-bios</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
 
 		<p class="font" style="font-family:emojifont;font-size:23px;"><a href="https://www.asterism-m.com/font/bmp-1byte/02.php" target="_blank" style="font-weight:normal;font-family:ms pgothic;">(emojifont) by asterism</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
 
